--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<img src="https://"></img>
+<img src="https://raw.githubusercontent.com/beak2825/sourcegif/refs/heads/main/steganographylock.gif"></img>
